# booster_gym

resources/: 7_dofs_arms_with_jaw  T1_7_dof_arm_serial.urdf  convert_urdf_to_usd.py  convert_usd_to_ascii.sh  convert_usd_to_ascii_helper.py  convert_usda_to_usd_helper.py  create_nub_usd.py  create_nub_usd_isaaclab.py  create_nub_usd_simple.py  fix_hand_names.py  fix_serial_urdf_paths.py  merge_t1_7dof_with_hands.py  merge_t1_with_hands.py  remove_link_joints_from_usd.py
resources/RH56DFTP/urdf_left_with_force_sensor/: CMakeLists.txt  package.xml
resources/RH56DFTP/urdf_left_with_force_sensor/launch/: display.launch.py
resources/RH56DFTP/urdf_left_with_force_sensor/meshes/: left_little_1.STL  thumb_force_sensor_2.STL
resources/RH56DFTP/urdf_left_with_force_sensor/rviz/: left.rviz
resources/RH56DFTP/urdf_left_with_force_sensor/urdf/: extract_inertial_gui_left.py  urdf_left_with_force_sensor.csv  urdf_left_with_force_sensor.urdf  urdf_left_with_force_sensor.xacro  质量属性测量0.docx
resources/RH56DFTP/urdf_right_with_force_sensor/: CMakeLists.txt  package.xml
resources/RH56DFTP/urdf_right_with_force_sensor/launch/: display.launch.py
resources/RH56DFTP/urdf_right_with_force_sensor/rviz/: right.rviz
resources/RH56DFTP/urdf_right_with_force_sensor/urdf/: extract_inertial_gui.py  urdf_right_with_force_sensor.csv  urdf_right_with_force_sensor.urdf  (+1 more)
resources/T1_7dof_with_hands/: T1_7dof_with_hands.urdf.backup
resources/T1_with_hands/: T1_with_hands.urdf
resources/T1_with_hands_5dof/: T1_with_hands.urdf  T1_with_hands.urdf.backup
(+15 files in other folders)
