<?xml version="1.0"?>
<package format="3">
  <name>urdf_left_with_force_sensor</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf_left_with_force_sensor</p>
    <p>This package contains configuration data, 3D models and launch files for urdf_left_with_force_sensor urdf</p>
  </description>
  <author>TODO</author>
  <maintainer email="1900329441@email.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool dependency for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend> 

  <!-- Export section -->
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>

